working with uvi

--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
     <!--Style CSS-->
     <link rel="stylesheet" href="Assets/style.css">
     <title>Weather App</title>
+    <!--Fontawesome-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
 </head>
 
 <body>
 
-<div class="jumbotron jumbotron-fluid custom-jumbotron text-center" style="background-color: rgb(78, 72, 72)";><h1>Weather Dashboard</h1></div>
-
+<!-- As a heading -->
+    <nav class="navbar navbar-light bg-dark">
+        <div class="container-fluid pb-3">
+            <span class="navbar-brand mb-0 h1 mx-auto text-white fs-1" style="width: 200px;">Weather Dashboard</span>
+    </div>
+    </nav>
 <h5>Search for a City:</h5>
 <!-- The form -->
 <form class="example" action="action_page.php">
