--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
   </form>
 
 <section>
-    <h3 id="currentCity"></h3>
-    <ul id="currentInfo">
+
+    <h3 id="currentCity" ></h3>
+    <ul id="currentInfo" style="list-style-type: none";>
         <li id="temp"></li>
         <li id="humidity"></li>
         <li id="windSpeed"></li>
